Finalized current step in web project

--- a/detail.html
+++ b/detail.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <nav>
-                <a href="list.html">Main Page</a>
+                <a class="white-font" href="list.html">Main Page</a>
             </nav>
 
 
@@ -19,7 +19,7 @@
 
         </header>
         <main>
-            <h1>
+            <h1 class="link-color">
                 Vegetarian Tacos
             </h1>
 
